# GPT-WorldModel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: pinpad.yaml  rope_koch.yaml  rope_koch_fixed.yaml
scripts/: cli.py
src/gpt_worldmodel/: __init__.py  dataset.py  factorization.py  networks.py  transform.py  worldmodel.py
